--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-
+/* Base Styles ----------------- */
 body {
   font: 1em/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #878787;
@@ -20,23 +20,33 @@ h2 {
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 1.25em; /* 20px/16px */
   color: #48525c;
+  line-height: 1.2;
 }
 
-
+/* Pseudo-Classes ------------------ */
 a:link{
   text-decoration: none;
-  color: rgb(255, 169, 73);
+  color: #ffa949;
 }
 
+a:visited {
+  color: lightblue;
+}
 a:hover{
   color: rgba(255, 169, 73, .4);
 }
 
+a:active {
+  color: lightcoral;
+}
 
+
+
+/* Main Styles ---------------------- */
 .main-header {
-    background-color: rgb(255, 169, 73);
+    background-color: #ffa949;
 }
 
 
@@ -49,7 +59,7 @@ a:hover{
 #main-footer {
   padding-top: 50px;
   padding-bottom: 50px;
-  border-bottom: solid 10px orange;
+  border-bottom: solid 10px #ffa949;
   }
 
 .t-border {
@@ -60,5 +70,12 @@ a:hover{
   color: white;
   background-color: #434a52;
   padding: 100px 120px;
+
+  border-top: 10px solid #ffa949;
 }
 
+/* Layout Styles ---------------------------- */
+
+.primary-content, .secondary-content {
+  width: 60%;
+}
