--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ h2 {
   font-size: 3.3125em; /* 53px/16px */
   font-weight: normal;
   line-height: 1.1;
+  margin-bottom: .5em;
 }
 
 h3 {
@@ -76,14 +77,6 @@ a:active {
   border-top: 1px solid lightgrey;
 }
 
-.wildlife {
-  color: white;
-  background-color: #434a52;
-  padding: 100px 120px;
-
-  border-top: 10px solid #ffa949;
-}
-
 /* Layout Styles ---------------------------- */
 
 .primary-content, .secondary-content {
@@ -93,3 +86,10 @@ a:active {
 
 }
 
+.wildlife {
+  color: white;
+  background-color: #434a52;
+  padding: 100px 120px;
+
+  border-top: 10px solid #ffa949;
+}
