--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ h2 {
 h3 {
   font-size: 1.25em; /* 20px/16px */
   color: #48525c;
-  line-height: 1.2;
+  line-height: 1.7em; /* 34px/20px  */
 }
 
 /* Pseudo-Classes ------------------ */
@@ -67,6 +67,15 @@ a:active {
   text-align: center;
 }
 
+.callout {
+  font-size: 1.25em;
+  border-bottom: 3px solid #ffa949;
+  padding: 0 9px 3px;
+  margin-top: 20px;
+  display: inline-block;
+
+}
+
 .main-footer {
   padding-top: 50px;
   padding-bottom: 50px;
@@ -81,7 +90,6 @@ a:active {
 
 .primary-content, .secondary-content {
   width: 60%;
-  display: block;
   margin: auto
 
 }
@@ -89,7 +97,19 @@ a:active {
 .wildlife {
   color: white;
   background-color: #434a52;
-  padding: 100px 120px;
+  padding: 18% 24%;
 
   border-top: 10px solid #ffa949;
+  margin: 105px 0 30px;
+}
+
+.secondary-content {
+  padding-top: 80px;
+  padding-bottom: 105px;
+
+  border-bottom: 2px dotted lightgrey;
+}
+
+.primary-content {
+  margin-bottom: 60px;
 }
