--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,19 @@ h1 {
   text-transform: uppercase;
   font-weight: normal;
   line-height: 1.3;
+  /* Text shadow by mardotto */
+  text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
 }
 
 h2 {
@@ -32,9 +45,16 @@ h3 {
 img {
   max-width: 100%;
   margin-bottom: 20px;
+  border-radius: 10px;
 }
 
+ul, ol {
+  margin: 30px 0px;
+}
 
+li {
+  margin-bottom: 10px;
+}
 /* Pseudo-Classes ------------------ */
 
 a:link {
@@ -59,7 +79,9 @@ a:active {
   padding-top: 170px;
   height: 850px;
   
-  background: #ffa949 url('../img/mountains.jpg') no-repeat center /cover;
+  background: linear-gradient(#ffa949, transparent 90%),
+              linear-gradient(0deg, #fff, transparent),
+               #ffa949 url('../img/mountains.jpg') no-repeat center /cover;
 }
 
 .title {
@@ -114,17 +136,20 @@ a:active {
   max-width: 900px;
   padding-left: 50px;
   padding-right: 50px;
-  margin: auto
-
+  margin: auto;
 }
 
 .wildlife {
   color: white;
   background-color: #434a52;
   padding: 18% 24%;
-
   border-top: 10px solid #ffa949;
   margin: 105px 0 30px;
+  background-size: cover;
+  background-image: url('../img/bear.jpg');
+  box-shadow: inset 0px 0px 50px 10px rgba(0, 0, 0, 1);
+
+  border-radius: 10px;
 }
 
 .arrow {
