--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+/* Web Fonts ----------------- */
+
+@font-face {
+  font-family: 'Abolition Regular';
+  src: url('../fonts/abolition-regular-webfont.eot');   /* Embedded OpenType EOT for internet explorer*/
+  src: url('../fonts/abolition-regular-webfont.eot?#iefix') format('embedded-opentype'),/* Embedded OpenType EOT for older versions of internet explorer*/
+       url('../fonts/abolition-regular-webfont.woff') format('woff'), /* Web Open Font Format - Mozilla*/
+       url('../fonts/abolition-regular-webfont.ttf') format('truetype');  /* TrueType Format */
+}
+/* Blank Use*/
+
+
 /* Base Styles ----------------- */
 * {
   box-sizing: border-box;
@@ -8,14 +20,19 @@ body {
   margin: 0;
 }
 
+h1, h2 {
+  font-family: 'Abolition Regular', Helvetica, Arial, sans-serif;
+}
+
 h1 {
   color: rgba(255, 255, 255, 1);
   font-size: 5.625rem;
   text-transform: uppercase;
   font-weight: normal;
+  margin: 12px 0 0;
   line-height: 1.3;
   /* Text shadow by mardotto */
-  text-shadow: 0 1px 0 #ccc,
+  /* text-shadow: 0 1px 0 #ccc,
                0 2px 0 #c9c9c9,
                0 3px 0 #bbb,
                0 4px 0 #b9b9b9,
@@ -26,7 +43,7 @@ h1 {
                0 3px 5px rgba(0,0,0,.2),
                0 5px 10px rgba(0,0,0,.25),
                0 10px 10px rgba(0,0,0,.2),
-               0 20px 20px rgba(0,0,0,.15);
+               0 20px 20px rgba(0,0,0,.15); */
 }
 
 h2 {
@@ -87,6 +104,10 @@ a:active {
 .title {
   color: white;
   font-size: 1.625rem; /* 26px/16px*/
+  letter-spacing: .065em;
+  font-weight: 200px;
+  border-bottom: 2px solid;
+  padding-bottom: 10px;
 }
 
 .intro {
@@ -154,6 +175,7 @@ a:active {
 
 .arrow {
   width: 50px;
+  margin-top: 200px;
 }
 /* Floated Columns  ---------------------------- */
 
