w3c validator error removed

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 * {
   box-sizing: border-box;
 }
+
 body {
   font: 1em/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #878787;
@@ -103,7 +104,7 @@ a:active {
   color: white;
   font-size: 1.625rem; /* 26px/16px*/
   letter-spacing: .065em;
-  font-weight: 200px;
+  font-weight: 200;
   border-bottom: 2px solid;
   padding-bottom: 10px;
 }
